Sanitize History
================================================================================

Version 1.0.1 (?)
  * You can now specify :relative in a protocol config array to allow attributes
    containing relative URLs with no protocol. The Basic and Relaxed configs
    have been updated to allow relative URLs.

Version 1.0.0 (2008-12-25)
  * First release.